[gd_scene load_steps=12 format=3 uid="uid://bsubtd6gev64o"]

[ext_resource type="Script" uid="uid://022kwi1qitit" path="res://AuthUI.gd" id="1_463vv"]
[ext_resource type="FontFile" uid="uid://x35jxbheh8ej" path="res://assets/fonts/온글잎 의연체.ttf" id="2_ownglyph"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_card"]
bg_color = Color(0.94902, 0.94902, 0.94902, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_input"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
content_margin_left = 14.0
content_margin_top = 10.0
content_margin_right = 14.0
content_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_normal"]
bg_color = Color(0.67451, 0.847059, 0.72549, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_hover"]
bg_color = Color(0.623529, 0.811765, 0.666667, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_pressed"]
bg_color = Color(0.560784, 0.764706, 0.603922, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_disabled"]
bg_color = Color(0.752941, 0.827451, 0.772549, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_close_normal"]
bg_color = Color(0.93, 0.93, 0.93, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_close_hover"]
bg_color = Color(0.85, 0.85, 0.85, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_close_pressed"]
bg_color = Color(0.78, 0.78, 0.78, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="SigninUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_463vv")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.862745, 0.862745, 0.862745, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Card" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(820, 560)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_card")

[node name="CardMargin" type="MarginContainer" parent="CenterContainer/Card"]
layout_mode = 2
theme_override_constants/margin_left = 56
theme_override_constants/margin_top = 44
theme_override_constants/margin_right = 56
theme_override_constants/margin_bottom = 44

[node name="VBox" type="VBoxContainer" parent="CenterContainer/Card/CardMargin"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="HeaderRow" type="HBoxContainer" parent="CenterContainer/Card/CardMargin/VBox"]
layout_mode = 2
alignment = 2

[node name="CloseButton" type="Button" parent="CenterContainer/Card/CardMargin/VBox/HeaderRow"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_close_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_close_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_close_pressed")
theme_override_colors/font_color = Color(0.2, 0.2, 0.2, 1)
theme_override_font_sizes/font_size = 22
text = "X"

[node name="TitleLabel" type="Label" parent="CenterContainer/Card/CardMargin/VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ownglyph")
theme_override_colors/font_color = Color(0.121569, 0.121569, 0.121569, 1)
theme_override_font_sizes/font_size = 56
text = "돌 키우기"
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="CenterContainer/Card/CardMargin/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.333333, 0.333333, 0.333333, 1)
theme_override_font_sizes/font_size = 20
text = "돌을 키우세요..."
horizontal_alignment = 1

[node name="SpacerTop" type="Control" parent="CenterContainer/Card/CardMargin/VBox"]
custom_minimum_size = Vector2(0, 6)
layout_mode = 2

[node name="EmailInput" type="LineEdit" parent="CenterContainer/Card/CardMargin/VBox"]
custom_minimum_size = Vector2(420, 44)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_input")
theme_override_colors/font_color = Color(0.121569, 0.121569, 0.121569, 1)
theme_override_font_sizes/font_size = 24
placeholder_text = "E-mail"

[node name="PasswordInput" type="LineEdit" parent="CenterContainer/Card/CardMargin/VBox"]
custom_minimum_size = Vector2(420, 44)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_input")
theme_override_colors/font_color = Color(0.121569, 0.121569, 0.121569, 1)
theme_override_font_sizes/font_size = 24
placeholder_text = "Password"
secret = true

[node name="SigninButton" type="Button" parent="CenterContainer/Card/CardMargin/VBox"]
custom_minimum_size = Vector2(420, 44)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_btn_pressed")
theme_override_styles/disabled = SubResource("StyleBoxFlat_btn_disabled")
theme_override_colors/font_color = Color(0.121569, 0.121569, 0.121569, 1)
theme_override_font_sizes/font_size = 30
text = "로그인"

[node name="SignupButton" type="Button" parent="CenterContainer/Card/CardMargin/VBox"]
custom_minimum_size = Vector2(420, 44)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_btn_pressed")
theme_override_styles/disabled = SubResource("StyleBoxFlat_btn_disabled")
theme_override_colors/font_color = Color(0.121569, 0.121569, 0.121569, 1)
theme_override_font_sizes/font_size = 30
text = "회원가입"

[node name="StatusLabel" type="Label" parent="CenterContainer/Card/CardMargin/VBox"]
custom_minimum_size = Vector2(420, 28)
layout_mode = 2
theme_override_colors/font_color = Color(0.333333, 0.333333, 0.333333, 1)
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1
autowrap_mode = 2

[node name="LangRow" type="HBoxContainer" parent="CenterContainer/Card/CardMargin/VBox"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="LangLabel" type="Label" parent="CenterContainer/Card/CardMargin/VBox/LangRow"]
custom_minimum_size = Vector2(120, 44)
layout_mode = 2
theme_override_colors/font_color = Color(0.121569, 0.121569, 0.121569, 1)
theme_override_font_sizes/font_size = 24
text = "언어 설정"
vertical_alignment = 1

[node name="KoButton" type="Button" parent="CenterContainer/Card/CardMargin/VBox/LangRow"]
custom_minimum_size = Vector2(140, 44)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_btn_pressed")
theme_override_colors/font_color = Color(0.121569, 0.121569, 0.121569, 1)
theme_override_font_sizes/font_size = 24
text = "한국어"

[node name="EnButton" type="Button" parent="CenterContainer/Card/CardMargin/VBox/LangRow"]
custom_minimum_size = Vector2(140, 44)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_btn_pressed")
theme_override_colors/font_color = Color(0.121569, 0.121569, 0.121569, 1)
theme_override_font_sizes/font_size = 24
text = "English"
